--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -320,5 +320,25 @@ footer p {
  
 .imgProcesso {
     height: 200px;
+    padding-top: 20px;
      
+}
+.usuario {
+    padding: 50px;
+}
+.usuario p {
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+.contato {
+    font-size: 20px;
+    margin: 50px;
+}
+.contato h1 {
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+.contato p {
+    margin-bottom: 10px;
 }
