--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -65,7 +65,7 @@ html, body {
 
 body {
   
-    background-color: #333; 
+    background-color: #99ccff; 
     font-family: "Arial";
      
     font-size: 16px;
